Converting object with GN modifier containing Capture Attribute node to mesh creates anonymous attributes #95613

Closed
opened 2022-02-08 13:16:43 +01:00 by Ludvik Koutny · 7 comments
Contributor

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-07 22:08, hash: 229d0ace02
Worked: (newest version of Blender that worked as expected)

Short description of error
When converting a GN object with a modifier which uses a GN node network containing Capture Attribute node(s) into a mesh using bpy.ops.object.convert(target='MESH'), the resulting mesh contains anonymous attributes user has not intended to output.

Exact steps for others to reproduce the error

  1. Open the attached file:
  2. Convert the cube to mesh using Object>Apply>Visual Geometry to Mesh:
    image.png
    Result: The resulting mesh contains internal anonymous attributes user has not intended to output
    Expected: The resulting mesh contains only the attributes user has intended to output
    AttributeBug.blend
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-07 22:08, hash: `229d0ace02` Worked: (newest version of Blender that worked as expected) **Short description of error** When converting a GN object with a modifier which uses a GN node network containing Capture Attribute node(s) into a mesh using bpy.ops.object.convert(target='MESH'), the resulting mesh contains anonymous attributes user has not intended to output. **Exact steps for others to reproduce the error** 1. Open the attached file: 2. Convert the cube to mesh using Object>Apply>Visual Geometry to Mesh: ![image.png](https://archive.blender.org/developer/F12855179/image.png) Result: The resulting mesh contains internal anonymous attributes user has not intended to output Expected: The resulting mesh contains only the attributes user has intended to output [AttributeBug.blend](https://archive.blender.org/developer/F12856960/AttributeBug.blend)
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

@Rawalanche Hi, probably a dumb question but I could not find GN modifier on cube. Did you upload the correct file?

@Rawalanche Hi, probably a dumb question but I could not find GN modifier on cube. Did you upload the correct file?
Author
Contributor

In #95613#1304425, @PratikPB2123 wrote:
@Rawalanche Hi, probably a dumb question but I could not find GN modifier on cube. Did you upload the correct file?

Huh, that is so strange :| I am sure I did, but upon reopening I do not see it. This one should work hopefully.AttributeBug.blend

> In #95613#1304425, @PratikPB2123 wrote: > @Rawalanche Hi, probably a dumb question but I could not find GN modifier on cube. Did you upload the correct file? Huh, that is so strange :| I am sure I did, but upon reopening I do not see it. This one should work hopefully.[AttributeBug.blend](https://archive.blender.org/developer/F12856960/AttributeBug.blend)
Pratik Borhade changed title from Converting object with GN modifier containing Capture Attribute node to mesh using Convert to Mesh operator clutters resulting mesh with anonymous attributes to Converting object with GN modifier containing Capture Attribute node to mesh creates anonymous attributes 2022-02-09 12:36:12 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jacques Lucke self-assigned this 2022-02-09 17:48:31 +01:00

This issue was referenced by 25c4000796

This issue was referenced by 25c4000796833966386b125744b17ede81aa62b1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95613
No description provided.