Fix T95613: remove anonymous attributes when converting object

This is the same behavior as when applying a geometry nodes modifier
that adds anonymous attributes.